@@ -1,3 +1,6 @@
+2009-10-23  6.5.6-1 Samuel Thibault  <samuel.thibault@ens-l...>
+  * Braille coder fix for DirectClass images
+
 2009-10-19  6.5.7-1 Wang Dataton <wang@datat...>
   * Use fdopen() rather than MagickOpenStream() in coders/pict.c.
 
